--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,6 +6,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
+  <meta name="google-site-verification" content="5S2Dk9H9kL_A6Ru15hidGU6hse0M2wL8tqEs3jzFtD8" />
   <meta name="Home 2 Hospital"
     content="H2H is a selfless student initiative just made for social welfare .H2H aims to provide unique platform and ease to  all the people who are seeking for any medical help in the pandemic Covid-19. " />
 
