--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="google-site-verification" content="5S2Dk9H9kL_A6Ru15hidGU6hse0M2wL8tqEs3jzFtD8" />
-  <meta name="Home 2 Hospital"
-    content="H2H is a selfless student initiative just made for social welfare .H2H aims to provide unique platform and ease to  all the people who are seeking for any medical help in the pandemic Covid-19. " />
+  <meta name="Tech For Cause"
+    content="Tech For Cause is a selfless student initiative just made for social welfare .Tech For Cause aims to provide unique platform and ease to  all the people who are seeking for any medical help in the pandemic Covid-19. " />
 
   <link rel="shortcut icon" href="./h2hlogo.png" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
     integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
     crossorigin="anonymous" />
 
-  <title>Home 2 Hospital</title>
+  <title>Tech For Cause</title>
 </head>
 
 <body>
